; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/lasat/extr_picvue.c_pvc_dump_string.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/lasat/extr_picvue.c_pvc_dump_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PVC_VISIBLE_CHARS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pvc_dump_string(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @strlen(i8* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @pvc_write_string(i8* %6, i32 0, i32 0)
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @PVC_VISIBLE_CHARS, align 4
  %10 = icmp sgt i32 %8, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load i8*, i8** %2, align 8
  %13 = load i32, i32* @PVC_VISIBLE_CHARS, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %12, i64 %14
  %16 = call i32 @pvc_write_string(i8* %15, i32 0, i32 1)
  br label %17

17:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @pvc_write_string(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
